# OpenNetMap

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  MILESTONE_1_PLAN.md  PROGRAMMA.md  PROJECT_SNAPSHOT.md  README.md  ROADMAP.md  docker-compose.bridge.yml  docker-compose.yml  inventory.db  main.py  pyproject.toml  pytest.ini  pytest.txt  requirements.txt  topology_engine_prompt.md  tree.txt
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CHANGELOG_SUMMARY.md  MILESTONE_1_RESULTS.md  PROJECT_SNAPSHOT.md  ROADMAP.md  USO.md  network_inventory_enterprise_prompt.md
docs/Claude docs/: CAMBIARE_MODELLO_CLAUDE.md  COMANDI.md  CONSIGLI.md  CONTESTO_PROGETTO.md  GUIDA_CONTEXT_REFRESH.md  HANDOFF.md  STATO_PROGETTO.md  TODO.md
docs/archive/: MILESTONE_1_RESULTS.md  PROGETTO_ENTERPRISE.md  (+1 more)
network_inventory/: __init__.py  templating.py
reports_output/: enterprise_inventory.db  inventory.csv  inventory.db  inventory.html  inventory.json  monitor_test.db  topology.graphml  topology.html  topology.json
requirements/: dev.txt
scripts/: install.ps1  install.sh  physical_map.py  snmp_topology_dump.py  topology_probe.py
temp_test_output/: inventory.html
tests/: test_api.py  test_arp_scanner.py  test_assessment.py  test_banners.py  test_classifier.py  test_correlation.py  test_events.py  test_inventory.py  test_main.py  test_mdns_scanner.py  test_monitor.py  test_netbios_scanner.py  test_network_utils.py  test_reports.py  test_smoke.py  test_snmp_topology.py  test_ssdp_scanner.py  test_store.py  test_templating.py  test_topology.py
(+66 files in other folders)
