[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true

[project]
name = "opennetmap"
version = "0.1.0"
description = "Network discovery and inventory tool (OpenNetMap)"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"